style.css
@font-face {
    font-family: 'azukifontBI';
    src: url('assets/fonts/azukifontB.ttf');
}

* {
    font-family: 'azukifontBI';
    font-size: 20px;
    color: white;
}

body {
    background: #e29576;
    filter: saturate(0.8);
    display: flex;
    justify-content: center;
    height: 100%;
    position: absolute;
    left: 0;
    top: 0;
    margin: 0;
    width: 100%;
}


#game-canvas {
    top: 0;
    left: 0;
    cursor: crosshair;
    background: rgba(255, 255, 255, 0.3);
    box-sizing: border-box;
    border-radius: 0.35rem;
    margin-top: 1rem;
    width: 100%;
    max-height: 80vh;
    box-shadow: 0 0.5rem 1rem rgb(0 0 0 / 15%);
}

#block {
    display: none;
}

#game {
    display: flex;
    width: 80%;
    flex-direction: column;
    align-items: center;
}

#vn-controls {
    display: flex;
    flex-direction: column;
    position: fixed;
    height: 20%;
    bottom: 0;
    width: 70%;
    padding: 1rem;
    left: 50%;
    transform: translate(-50%, 0);
    margin-top: 1rem;
    margin-bottom: 1rem;
    background: #c77843;
    border-radius: 0.5rem;
    box-shadow: 0 0.5rem 1rem rgb(0 0 0 / 15%);
}

#vn-text {
    height: 90%;
    font-size: 0.9rem;
    margin-left: 1rem;
}

#vn-speaker-name {
    margin-bottom: 0.2rem;
    font-size: 1rem;
    transform: translate(0, -0.6rem);
}

#vn-buttons {
    display: flex;
    margin-top: auto;
}

#vn-buttons button {
    width: 100%;
    padding: 0.3rem;
    margin: 1rem;
    margin-bottom: auto;
    background: rgba(255, 255, 255, 0.20);
    border: none;
    font-size: 0.8rem;
    border-radius: 0.25rem;
    transition-duration: 0.2s;
}

#vn-buttons button :not(:last-child) {
    margin-right: 1rem;
}

#vn-buttons button:hover,
#vn-buttons button:active {
    background: rgba(255, 255, 255, 0.60);
    cursor: pointer;
    box-shadow: 0 0.5rem 1rem rgb(0 0 0 / 15%);
}

@media (min-aspect-ratio: 18/9) {
    #vn-controls {
        width: 92%;
        padding: 0.4rem;
        height: 25%;
        margin-bottom: 0.2rem;
    }

    #vn-speaker-name {
        margin-bottom: auto;
        font-size: 0.8rem;
        transform: translate(0, -0.2rem);
    }

    #vn-buttons button {
        padding: 0.1rem;
        margin: 0.3rem;
    }

    #vn-text {
        height: 90%;
        font-size: 0.8rem;
        margin-left: 0.5rem;
    }

    #game-canvas {
        margin-top: 0.1rem;
    }
}

.fullscreen {
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: large;
    z-index: 500000;
    position: absolute;
    top: 0;
    left: 0;
    width: 100vw;
    height: 100vh;
    margin: 0;
    background: #f5f4f0;
    color: black;
}

@media (max-aspect-ratio: 12/10) {
    #block {
        z-index: 999999;
        display: flex;
    }

    canvas {
        display: none;
    }
}

#alert {
    background: #c77843 !important;
    font-size: 1em;
}

#alert>*>button {
    background: rgba(255, 255, 255, 0.20) !important;
    border-radius: 0.5em;
    padding: 1em;
    padding-top: 0.3em;
    padding-bottom: 0.3em;
    border: none;
    transition-duration: 0.2s;
}

#alert>*>button:hover,
#alert>*>button:active {
    background: rgba(255, 255, 255, 0.60) !important;
    cursor: pointer;
}

